# ayps_utils

./: .gitignore  README.md  procedimientos  requirements.txt  wizard
DistPipelineFWK_bak/: CMakeLists.txt  config.h.in  readme.txt
DistPipelineFWK_bak/cmake_modules/: FindAllegro.cmake  FindclBLAS.cmake  PlatformIntrospection.cmake
DistPipelineFWK_bak/src/: CMakeLists.txt  test_concept.cpp
DistPipelineFWK_bak/src/core/: CMakeLists.txt  base_filter.hpp  base_node.hpp  base_source.hpp  base_splitter.hpp  cmd_data_types.h  command_node.h  data_packet_types.h  node_factory.hpp
DistPipelineFWK_bak/src/dsp/: CMakeLists.txt  dfrft_cublas.cpp  dfrft_cublas.h  dfrft_filter.hpp  dfrft_gsl.cpp  dfrft_gsl.h  dft.cpp  dft.h  dft_filter.hpp  dsp_commons.cpp  dsp_commons.h  power_filter.hpp  quadrature_filter.hpp
DistPipelineFWK_bak/src/executables/: CMakeLists.txt
DistPipelineFWK_bak/src/executables/clases/: CMakeLists.txt  clase_1.cpp  clase_2.cpp
DistPipelineFWK_bak/src/executables/examples/: CMakeLists.txt  chirp.cpp  dft.cpp  quadrature.cpp  serial_port.cpp  simple.cpp
DistPipelineFWK_bak/src/executables/redpitaya/: CMakeLists.txt  ieee754_1985.hpp  main.cpp  scpi_cli.hpp
DistPipelineFWK_bak/src/oscilloscope/: commons.hpp  osc_device.hpp  oscillosope.hpp  renderer.hpp  window.hpp
DistPipelineFWK_bak/src/signal_sources/: CMakeLists.txt  serial_port_src.hpp
