
add_executable (clase_1 "clase_1.cpp")
target_link_libraries(clase_1 ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(clase_1 ${Boost_LIBRARIES})
target_link_libraries(clase_1 ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(clase_1 ${Boost_SYSTEM_LIBRARY})
target_link_libraries(clase_1 ${ALLEGRO_LIBRARIES})
target_link_libraries(clase_1 ${GSL_LIBRARIES})
target_link_libraries(clase_1 lib_dsp lib_core)
set_property(TARGET clase_1 PROPERTY CXX_STANDARD 11)

add_executable (clase_2 "clase_2.cpp")
target_link_libraries(clase_2 lib_core)
target_link_libraries(clase_2 ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(clase_2 ${Boost_LIBRARIES})
target_link_libraries(clase_2 ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(clase_2 ${Boost_SYSTEM_LIBRARY})
target_link_libraries(clase_2 ${Boost_THREAD_LIBRARY})
set_property(TARGET clase_2 PROPERTY CXX_STANDARD 11)