

add_executable (ex_simple "simple.cpp")
  target_link_libraries(ex_simple ${CMAKE_THREAD_LIBS_INIT})
set_property(TARGET ex_simple PROPERTY CXX_STANDARD 11)

add_executable (ex_quadrature "quadrature.cpp")
  target_link_libraries(ex_quadrature ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(ex_quadrature ${Boost_LIBRARIES})
  target_link_libraries(ex_quadrature ${Boost_FILESYSTEM_LIBRARY})
  target_link_libraries(ex_quadrature ${Boost_SYSTEM_LIBRARY})
  target_link_libraries(ex_quadrature ${ALLEGRO_LIBRARIES})
  target_link_libraries(ex_quadrature ${GSL_LIBRARIES})
  target_link_libraries(ex_quadrature lib_dsp lib_core)
set_property(TARGET ex_quadrature PROPERTY CXX_STANDARD 11)

add_executable (ex_dft "dft.cpp")
target_link_libraries(ex_dft ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ex_dft ${Boost_LIBRARIES})
target_link_libraries(ex_dft ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(ex_dft ${Boost_SYSTEM_LIBRARY})
target_link_libraries(ex_dft ${ALLEGRO_LIBRARIES})
target_link_libraries(ex_dft ${GSL_LIBRARIES})
target_link_libraries(ex_dft lib_dsp lib_core)
set_property(TARGET ex_dft PROPERTY CXX_STANDARD 11)

add_executable (ex_chirp "chirp.cpp")
  target_link_libraries(ex_chirp ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(ex_chirp ${Boost_LIBRARIES})
  target_link_libraries(ex_chirp ${Boost_FILESYSTEM_LIBRARY})
  target_link_libraries(ex_chirp ${Boost_SYSTEM_LIBRARY})
  target_link_libraries(ex_chirp ${ALLEGRO_LIBRARIES})
  target_link_libraries(ex_chirp ${GSL_LIBRARIES})
  target_link_libraries(ex_chirp lib_dsp lib_core)
set_property(TARGET ex_chirp PROPERTY CXX_STANDARD 11)

add_executable (ex_serial "serial_port.cpp")
  target_link_libraries(ex_serial lib_core)
  target_link_libraries(ex_serial ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(ex_serial ${Boost_LIBRARIES})
  target_link_libraries(ex_serial ${Boost_FILESYSTEM_LIBRARY})
  target_link_libraries(ex_serial ${Boost_SYSTEM_LIBRARY})
  target_link_libraries(ex_serial ${Boost_THREAD_LIBRARY})
set_property(TARGET ex_serial PROPERTY CXX_STANDARD 11)